# pandoc-brick

./: .gitignore  CHANGELOG.md  LICENSE  pandoc-brick.cabal
demos/: Main.hs
src/Brick/Widgets/: Pandoc.hs
